# Pay-plugin-example

./: .gitignore  CLAUDE.md  FRONTEND_MODIFICATIONS.md  LICENSE  README.md
.claude/: settings.json
.claude/agents/: payment-test-reviewer.md
.github/workflows/: ci.yml  deploy.yml
PayBackend/: .dockerignore  .env.development.example  .env.example  .env.production.example  .gitignore  CMakeLists.txt  Dockerfile  conanfile.txt  config.json  docker-compose.yml  migrate_refund.sql  model.json  test_alipay_sign.md
PayBackend/controllers/: AlipayCallbackController.cc  AlipayCallbackController.h  HealthCheckController.cc  HealthCheckController.h  PayController.cc  PayController.h  PayMetricsController.h  WechatCallbackController.cc  WechatCallbackController.h
PayBackend/deploy/: alerts.yml  grafana_dashboard.json  prometheus_config.yml  security_headers_config.json
PayBackend/deploy/ops/: backup_db.sh  restart_service.sh  restore_db.sh  view_logs.sh
PayBackend/docs/: README.md  REFACTORING_SUMMARY.md  alipay_sandbox_setup.md  api_config_complete.md  api_key_configuration.md  configuration_status.md  current_status_2026_04_13.md  deployment_guide.md  e2e_testing_guide.md  environment_setup.md  migration_guide.md  optimization_verification_report.md  payment-design.md  performance_optimization_complete.md  phase1_completion_summary.md  phase2_performance_test_report.md  production_readiness_roadmap.md  project_completion_summary.md  security_audit_report_2026_04_13.md  tdd_cycle_execution_report.md  tdd_queryrefund_tests_complete.md  tdd_refundquery_update_report.md  tdd_tests_update_final_report.md  tdd_validation_plan.md  test_update_progress.md  troubleshooting.md  validation_report.md
PayBackend/docs/archive/tdd_reports/: tdd_integration_test_plan.md  tdd_red_state_verification.md
PayBackend/filters/: RateLimiterFilter.cc  RateLimiterFilter.h
PayBackend/models/: PayPayment.cc  PayPayment.h  PayRefund.cc  PayRefund.h
PayBackend/models_backup/: PayCallback.cc  PayCallback.h  PayIdempotency.cc  PayIdempotency.h  PayLedger.h  PayOrder.h  PayRefund.cc  PayRefund.h  README.md  model.json
PayBackend/plugins/: AlipaySandboxClient.cc  AlipaySandboxClient.h  PayPlugin.cc  PayPlugin.h  WechatPayClient.cc  WechatPayClient.h
PayBackend/scripts/: build.bat  check_config.bat  check_config.sh  deploy.bat  deploy.sh  generate_models.bat  healthcheck.sh  run_server.bat  setup_database.bat
PayBackend/services/: CallbackService.cc  CallbackService.h  IdempotencyService.cc  IdempotencyService.h  PaymentService.cc  PaymentService.h  ReconciliationService.cc  ReconciliationService.h  RefundService.cc  RefundService.h
PayBackend/sql/: 000_drop_pay_tables.sql  001_init_pay_tables.sql  002_add_indexes.sql  003_backfill_payment_records.sql  004_add_refund_payload_fields.sql
PayBackend/test/: CMakeLists.txt  CMakeLists_TDD_Simple.txt  CreatePaymentIntegrationTest.cc  IdempotencyIntegrationTest.cc  QueryOrderTest.cc  ReconcileSummaryTest.cc  RefundQueryTest.cc  TDD_Pure.cpp  TDD_QueryOrderTest.cc  TDD_SimpleTest.cc  WechatCallbackIntegrationTest.cc  WechatPayClientTest.cc  build_tdd_simple.bat  build_tdd_simple.sh  concurrent_perf.ps1  concurrent_test.sh  e2e_test.ps1  e2e_test.sh  final_perf.ps1  multi_process_test.ps1  performance_test.ps1  performance_test.sh  run_all_tests.ps1  run_perf_test.ps1  run_tdd_simple.bat  simple_perf.ps1  simple_perf_test.sh  ultra_simple.ps1  verify_optimization.ps1
PayBackend/test/service/: CallbackServiceTest.cc  MockHelpers.h  PaymentServiceTest.cc  RefundServiceTest.cc
PayBackend/utils/: ConfigLoader.cc  ConfigLoader.h
PayFrontend/: .env.example  .gitignore  CONFIG.md  README.md  index.html  package-lock.json  package.json  vite.config.js
PayFrontend/src/: App.vue
docs/: README.md
docs/api/: api_configuration_guide.md  pay-api-examples.md
docs/architecture/: architecture_overview.md
docs/deployment/: monitoring_setup.md
docs/development/: alipay_sandbox_quickstart.md  configuration_guide.md  logging_standards.md
docs/operations/: health_check_implementation.md  operations_manual.md  (+1 more)
scripts/: migrate_callbacks.py
(+39 files in other folders)
